WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105868
[EFL[WK2] Regression(
r138574
): Should not allocate memory in the fork
https://bugs.webkit.org/show_bug.cgi?id=105868
Summary
[EFL[WK2] Regression(r138574): Should not allocate memory in the fork
Chris Dumez
Reported
2012-12-30 05:04:24 PST
Thiago rightfully reported that my patch from
http://trac.webkit.org/changeset/138574
may cause regressions (deadlocks) because it is allocating memory in the fork. There was a commenting explaining that we should not do that but I missed it (sorry).
Attachments
Patch
(2.34 KB, patch)
2012-12-30 05:11 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-12-30 05:11:38 PST
Created
attachment 180953
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-31 08:32:40 PST
Comment on
attachment 180953
[details]
Patch Clearing flags on attachment: 180953 Committed
r138597
: <
http://trac.webkit.org/changeset/138597
>
WebKit Review Bot
Comment 3
2012-12-31 08:32:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug