[EFL[WK2] Regression(r138574): Should not allocate memory in the fork https://bugs.webkit.org/show_bug.cgi?id=105868

Reviewed by Kenneth Rohde Christiansen.

Store prefixed executable path in a CString before the fork to
avoid allocating memory in the fork by calling String::utf8().
Allocating memory in the fork may lead to deadlocks due to
FastMalloc and the fork not inheriting the threads.

* UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:
(WebKit::ProcessLauncher::launchProcess):


Canonical link: https://commits.webkit.org/124081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138597 268f45cc-cd09-0410-ab3c-d52691b4dbfc